--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="The Just Chatting Twitch alternative live streaming service">
     <title>Spiel</title>
+    <meta property="og:title" content="Spiel" />
+    <meta property="og:description" content="The Just Chatting Twitch alternative live streaming service" />
+    <meta property="og:image" content="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAUA
+    AAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO
+        9TXL0Y4OHwAAAABJRU5ErkJggg==" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="./app.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
