MORE POLISH BABY

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       }
     </script>
     <footer>
-      <pre class="large-pre"><b>Spiel</b></pre>
+      <pre><b>Spiel</b></pre>
       <button>Donate</button>
     </footer>
   </body>
