--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <ul>
               <li><button onclick="insertParam('content', 'home')">Home</button></li>
               <li><button onclick="insertParam('content', 'live')">Live</button></li>
-              <li><button onclick="insertParam('content', 'home')">Guides</button></li>
-              <li><button onclick="insertParam('content', 'home')">Support</button></li>
+              <li><button onclick="window.loaction.href = 'https://github.com/BrendanDN/Spiel/blob/main/README.md#guides'">Guides</button></li>
+              <li><button onclick="window.loaction.href = 'https://github.com/BrendanDN/Spiel/blob/main/README.md#support'">Support</button></li>
             </ul>
           </div>
           <hr>
