--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </script>
     <footer>
       <pre><b>Spiel</b></pre>
-      <button>Donate</button>
+      <button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel/blob/main/README.md#support-us'">Donate</button>
     </footer>
   </body>
 </html>
