preface draft one README.md

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="The Just Chatting Twitch alternative live streaming service">
+    <meta name="description" content="The Just Chatting Twitch and Youtube Live alternative live streaming service">
     <title>Spiel</title>
     <meta property="og:title" content="Spiel" />
-    <meta property="og:description" content="The Just Chatting Twitch alternative live streaming service" />
+    <meta property="og:description" content="The Just Chatting Twitch Youtube Live alternative live streaming service" />
     <meta property="og:image" content="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAUA
     AAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO
         9TXL0Y4OHwAAAABJRU5ErkJggg==" />
