--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="The Just Chatting Twitch and Youtube Live alternative live streaming service">
-    <title>Spiel</title>
-    <meta property="og:title" content="Spiel" />
+    <title>Spiel - Live Streaming</title>
+    <meta property="og:title" content="Spiel - Live Streaming" />
     <meta property="og:description" content="The Just Chatting Twitch Youtube Live alternative live streaming service" />
     <meta property="og:image" content="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAUA
     AAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO
