mastadon has been added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Spiel - Live Streaming</title>
     <meta property="og:title" content="Spiel - Live Streaming" />
     <meta property="og:description" content="The Just Chatting Twitch Youtube Live alternative live streaming service" />
-    <meta property="og:image" content="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAUA
-    AAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO
-        9TXL0Y4OHwAAAABJRU5ErkJggg==" />
+    <meta property="og:image" content="" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="./app.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
@@ -30,8 +28,8 @@
             <ul>
               <li><button onclick="insertParam('content', 'home')">Home</button></li>
               <li><button onclick="insertParam('content', 'live')">Live</button></li>
-              <li><button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel/blob/main/README.md#guides'">Guides</button></li>
-              <li><button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel/blob/main/README.md#support'">Support</button></li>
+              <li><button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel#guides'">Guides</button></li>
+              <li><button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel#support'">Support</button></li>
             </ul>
           </div>
           <hr>
@@ -139,7 +137,7 @@
     </script>
     <footer>
       <pre><b>Spiel</b></pre>
-      <button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel/blob/main/README.md#support-us'">Donate</button>
+      <button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel#support-us'">Donate</button>
     </footer>
   </body>
 </html>
