--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
       const pagesSignedOut = {
         'watch': watch,
-        'signin': signin,
-        'signup': signup,
-        'live': signin,
+        'signin': auth,
+        'signup': auth,
+        'live': auth,
         'home': home
       }
       
