--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
         'live': auth,
         'home': home
       }
+
+      //Configure GUN to pass to streamer
+      const peers = ['https://spiel-server-eu.herokuapp.com/gun', 'https://spiel-server-us.herokuapp.com/gun'];
+      const opt = { peers: peers, localStorage: false, radisk: false };
+      const gunDB = Gun(opt);
       
       //Configure GUN to pass to streamer
       const gun = Gun();
-      let user = gun.user().recall({sessionStorage: true});
+      const user = gun.user().recall({sessionStorage: true});
 
       const urlParams = new URLSearchParams(window.location.search);
       const content = urlParams.get('content');
