--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </head>
   <body id="app">
     <header>
-      <div>
+      <div class="center">
         <h1>Spiel</h1>
       </div>
-      <div>
+      <div class="center">
         <nav>
           <div>
             <ul>
@@ -111,7 +111,7 @@
     </script>
     <footer>
       <pre><b>Spiel</b></pre>
-      <button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel#support-us'">Donate</button>
+      <button onclick="window.location.href = 'https://github.com/BrendanDN/Spiel#support-us'">Donate</button> 
     </footer>
   </body>
 </html>
