--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       }
 
       //Configure GUN to pass to streamer
-      const peers = ['https://spiel-server-eu.herokuapp.com/gun', 'https://spiel-server-us.herokuapp.com/gun'];
+      const peers = ['https://spiel-server-eu.herokuapp.com/gun', 'https://spiel-server-us.herokuapp.com/gun',];
       const opt = { peers: peers, localStorage: false, radisk: false };
       const gunDB = Gun(opt);
       
