--- a/auth.html
+++ b/auth.html
@@ -7,7 +7,11 @@
     <meta property="og:title" content="Spiel - Live Streaming" />
     <meta property="og:description" content="The Just Chatting Twitch Youtube Live alternative live streaming service" />
     <meta property="og:image" content="" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#49cab0" />
+    <link rel="icon" href="img/favicon.png">
+    <link rel="apple-touch-icon" href="img/favicon.png">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
   </head>
