--- a/studio.html
+++ b/studio.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="The Just Chatting Twitch alternative live streaming service">
     <title>Spiel-Studio</title>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#49cab0" />
+    <link rel="icon" href="img/favicon.png">
+    <link rel="apple-touch-icon" href="img/favicon.png">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/GunRecorder.js"></script>
