--- a/auth.html
+++ b/auth.html
@@ -2,11 +2,12 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spiel-Auth</title>
     <meta property="og:title" content="Spiel - Live Streaming" />
     <meta property="og:description" content="The Just Chatting Twitch Youtube Live alternative live streaming service" />
     <meta property="og:image" content="" />
+    <meta name="theme-color" content="#49cab0"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="#49cab0" />
     <link rel="icon" href="img/favicon.png">
     <link rel="apple-touch-icon" href="img/favicon.png">
