--- a/studio.html
+++ b/studio.html
@@ -2,9 +2,10 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Just Chatting Twitch alternative live streaming service">
     <title>Spiel-Studio</title>
+    <meta name="theme-color" content="#49cab0"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="#49cab0" />
     <link rel="icon" href="img/favicon.png">
     <link rel="apple-touch-icon" href="img/favicon.png">
