--- a/watch.html
+++ b/watch.html
@@ -110,7 +110,7 @@
             }
           }
 
-          gunDB.get(streamer + '-chat').get('chat').map().on(function (data) {
+          gun.get(streamer + '-chat').get('chat').map().on(function (data) {
             if (chat.length >= 7) {
               chat.shift();
             }
