--- a/auth.html
+++ b/auth.html
@@ -15,6 +15,7 @@
     <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
+    <script scr="https://cdn.jsdelivr.net/npm/gun/lib/webrtc.js"></script>
   </head>
   <body>
     <h-d></h-d>
