--- a/studio.html
+++ b/studio.html
@@ -13,10 +13,10 @@
     <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/GunRecorder.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/GunStreamer.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/GunViewer.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/mediabuffer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunRecorder.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunStreamer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunViewer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/mediabuffer.js"></script>
   </head>
   <body>
     <h-d></h-d>
