--- a/watch.html
+++ b/watch.html
@@ -16,8 +16,8 @@
     <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/GunViewer.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/mediabuffer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunViewer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/mediabuffer.js"></script>
   </head>
   <body>
     <h-d></h-d>
