--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/radix.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/radisk.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/store.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/rindexed.js"></script>
     <script scr="https://cdn.jsdelivr.net/npm/gun/lib/webrtc.js"></script>
   </head>
   <body id="app">
