--- a/studio.html
+++ b/studio.html
@@ -13,6 +13,10 @@
     <link href="manifest.json" rel="manifest" />
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/radix.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/radisk.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/store.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/rindexed.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunRecorder.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunStreamer.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer/js/GunViewer.js"></script>
