--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
       <script src="js/stores.js"></script>
       <script src="js/components.js" defer></script>
       <script>
-        const winLoc = window.location.origin + "/watch.html?search=";
+        const winLoc = window.location.origin + "/view.html#";
 
-        gunDB.get('stream-meta').get('meta').map().once(async function (data, id) {
-          if (data != null) {
-            document.getElementById('streams').innerHTML += '<li><pre>' + data + '</pre style="font-size: clamp(1rem, 2vw, 2.5rem)"><a href="' + winLoc + id + '"><button aria-label="Watch ' + data + '">Watch Now</button></a></li>';
+        gunDB.get('gunmeeting_metadata').map().on(function (data, id) {
+          if (!data) {
+            return
+          }
+
+          if (data.title) {
+             document.getElementById('streams').innerHTML += '<li><pre>' + data.title + '</pre style="font-size: clamp(1rem, 2vw, 2.5rem)"><a href="' + winLoc + data.streamId + '"><button aria-label="Watch ' + data.title + '">Watch Now</button></a></li>';
           }
         });
       </script>
