--- a/view.html
+++ b/view.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -20,9 +19,11 @@
     </div>
   </header>
   <main>
-      <div class="container">
+      <div class="center">
         <H1 id="user_stream" style="display:inline"></H1>
-        <H1 id="stream_count" style="display:inline"></H1>
+      </div>
+      <H1 id="stream_count" style="display:inline"></H1>
+      <div class="container">
         <video id="video" width="60%" height="33.75%" data-role="video"
           data-poster="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/fe186655756437.5992117fb6ee1.gif"
           data-logo="../images/logo.png" data-logo-height="25" data-logo-target="https://metroui.org.ua/v4/"
@@ -42,10 +43,9 @@
   </main>
   <script src="js/stores.js"></script>
   <script src="js/components.js" defer></script>
-  <script src="js/messages.js"></script>
+  <script src="js/metadata.js"></script>
   <script>
     //Change to correct id
-    document.getElementById("user_stream").innerHTML = "You're watching <b>#" + STREAM_ID + "'s</b> stream"
     document.getElementById("video").id = STREAM_ID;
 
     //Configure GunViewer 
