changed home page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h-d></h-d>
     <main>
       <div class="center">
-        <h1>The Just Chatting Twitch alternative live streaming service</h1>
+        <h1>The alternative live streaming service to Twitch</h1>
         <ul class="container" id="streams"></ul>
         <p class="container">Appears you have reached the end of the streamer list, wel done :)</p>
       </div>
