studio fps increased

--- a/studio.html
+++ b/studio.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>ivecodestream</title>
+  <title>Spiel-Studio</title>
   <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/gun/lib/yson.js"></script> -->
   <script src="https://cdn.jsdelivr.net/gh/QVDev/GunStreamer@0.0.9/js/GunStreamer.js"></script>
   <link rel="shortcut icon" href="../images/icons/favicon.ico">
 </head>
@@ -28,7 +27,7 @@
       output: {
         width: 1280,  // resolution of the output stream
         height: 720,
-        fps: 16       // frames per second of the output stream
+        fps: 24      // frames per second of the output stream
       },
       injectStyles: true // whether to inject the WBS css
     }
